--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Xcode
+DerivedData/
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
@@ -60,3 +60,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+build/
